# blog-scraper-contextualai

./: .env.example  .gitignore  QUICKSTART.md  README.md  blogs-test.yaml  pyproject.toml  requirements.txt  scrape_report.json
.github/workflows/: ci.yml  scrape-blogs.yml
config/: __init__.py  agent.yaml  settings.py  sources.yaml
data/: scraped_urls.json
metadata/: anthropic_engineering_metadata.json  anthropic_news_metadata.json  anthropic_research_metadata.json  arize_blog_metadata.json  aws_ml_metadata.json  bair_blog_metadata.json  cohere_metadata.json  databricks_blog_metadata.json  hackernews_metadata.json  huggingface_metadata.json  langchain_metadata.json  langfuse_blog_metadata.json  llamaindex_metadata.json  mistral_news_metadata.json  msr_blog_metadata.json  pinecone_metadata.json
scripts/: __init__.py  run_scraper.py  run_unified.py  upload_to_contextual.py
src/: __init__.py
src/processors/: __init__.py
src/scrapers/: __init__.py  anthropic_scraper.py  base_scraper.py  generic_scraper.py  huggingface_scraper.py  langchain_scraper.py  llamaindex_scraper.py  unified_scraper.py
src/storage/: __init__.py  contextual_uploader.py  local_storage.py
src/utils/: __init__.py  logger.py  rate_limiter.py
tests/: __init__.py  test_scrapers.py
